--- a/01_HTML/base/index1.html
+++ b/01_HTML/base/index1.html
@@ -39,26 +39,21 @@ print "Hello there, " + name + "!"
             этого введите в терминале</p>
         <p><strong><u>chmod +x hello.py</u></strong></p>
         <p>в папке, в которой вы сохранили программу. Теперь запустите её.</p>
-        <pre>
+        <pre><code></code>
 greg@earth:~/python_examples$ ./hello.py
 Hello. I am a python program.
 What is your name? Ferd Burphel
 Hello there, Ferd Burphel!
-greg@earth:~/python_examples$</pre>
+greg@earth:~/python_examples$</pre></code>
         <p>Вот и всё.</p>
         <h2>Пример цикла For</h2>
         <p>Теперь давайте рассмотрим пример программирования цикла. Запустите текстовый редактор и наберите следующую программу:</p>
-        <pre>
+        <pre><code>
 #!/usr/bin/env python
 for cntr in range(0,10):
-    print cntr </pre>
+    print cntr </pre></code>
         <p><em>Не забудьте поставить символ табуляции перед строкой «print cntr».</em>Это важно. В
             Python для указания на блоки кода используются не круглые «(» и фигурные «{» скобки
             как в других языках программирования, а отступы.</p>
 </body>
-
-
-
-
-
 </html>
