--- a/03_HTML/base/index2.html
+++ b/03_HTML/base/index2.html
@@ -7,22 +7,23 @@
     <body>
         <h1 align="center"> HOW-TO: Программа на Python, Часть 2 </h1>
         <ul>
-            <li><em> Программа на Python — часть 1</em></li>
-            <li><em>Программа на Python — часть 2</em></li>
-            <li><em>Программа на Python — часть 3</em></li>
+            <li> <a href="index1.html">Программа на Python — часть 1</a> </li>
+            <li> <a href="index2.html">Программа на Python — часть 2</a> </li>
+            <li> <a href="index3.html">Программа на Python — часть 3 </a></li>
         </ul>
-        <h2>Содержание</h2>
+        <h2 id="Content">Содержание</h2>
         <h3>HOW-TO: Программа на Python, Часть 2</h3>
         <ul>
-            <li><u>Списки</u></li>
-            <li><u>Комментарии</u></li>
+            <li><a href="#Lists">Списки</a></li>
+            <li><a href="#Comments">Комментарии</a></li>
         </ul>
         <hr/>
         <p>Впрошлом уроке мы рассмотрели простую программу, которая использовала raw_input
             для получения ответа пользователя, простые типы переменных и простой цикл «<strong>for</strong>». В
             этом уроке мы рассмотрим ещё больше типов переменных и напишем ещё больше
             программ.</p>
-        <h2>Списки</h2>
+        <h2 id="Lists">Списки</h2>
+        <p><a href="#Content">К содержанию</a></p>
         <p>Давайте рассмотрим другой тип переменных, который называется <em>списки</em>. В других
             языках программирования они называются <em>массивами</em>. Если мы обратимся к аналогии с
             коробками для обуви, то массив (список) представляет собой несколько склеенных друг с
@@ -47,7 +48,8 @@ categories = ['Main dish','Meat','Fish','Soup','Cookies']
         </pre></code>
         <p>Таким образом, в <strong>categories[0]</strong>  хранится <em>'Main dish'</em> , а в <strong>categories[4]</strong>  —  <em>'Cookies'</em>. Всё очень просто. Я уверен, вы сможете придумать много других примеров использования списков. </p>
         <hr/>
-        <h2>Комментарии</h2>
+        <h2 id="Comments">Комментарии</h2>
+        <p><a href="#Content">К содержанию</a></p>
         <p>Далее, мы должны обсудить комментарии. Комментарии важны по нескольким причинам.
             Они не только говорят вам или другим людям, что вы пытаетесь делать, но и напомнят
             вам через полгода, что же вы хотели сделать. Когда вы будете писать много программ,
