--- a/03_HTML/base/index3.html
+++ b/03_HTML/base/index3.html
@@ -7,28 +7,29 @@
     <body>
         <h1 align="center"> HOW-TO: Программа на Python, Часть 3 </h1>
         <ul>
-            <li><em> Программа на Python — часть 1</em></li>
-            <li><em>Программа на Python — часть 2</em></li>
-            <li><em>Программа на Python — часть 3</em></li>
+            <li><a href="index1.html">Программа на Python — часть 1</a></li>
+            <li><a href="index2.html">Программа на Python — часть 2</a></li>
+            <li><a href="index3.html">Программа на Python — часть 3</a></li>
         </ul>
-        <h2>Содержание</h2>
+        <h2 id="Content">Содержание</h2>
         <h3>HOW-TO: Программа на Python, Часть 3</h3>
         <ul>
-            <li><u>Модули</u></li>
-            <li><u>Функции</u></li>
+            <li><a href="#Modules">Модули</a></li>
+            <li><a href="#Functions">Функции</a></li>
         </ul>
         <hr/>
         <p>В прошлый раз мы изучали списки, подстановку переменных, комментарии, сравнение и
             присвоение, операторы <strong>if</strong> и <strong>while</strong> while. Я обещал, что в этой части мы изучим модули и
             функции. Давайте начнём.</p>
-        <h2>Модули</h2>
+        <h2 id="Modules">Модули</h2>
+        <p><a href="#Content"> К содержанию</a></p>
         <p>Модули предлагают способ расширить программирование на Python. Вы можете создать
             свои модули, использовать те, которые поставляются с Python или которые написали
             другие. В самом Python есть сотни модулей, которые облегчают написание программ.
             Список модулей, поставляемых с Python, находится по адресу:
            <em><u>http://docs.python.org/modindex.html</u></em>. Некоторые модули предназначены для определённых
             операционных систем, но большинство из них кроссплатформенные и работают
-            одинаково на <u>Linux</u>, <u>Mac</u> и <u>Microsoft Windows</u>. Для использования внешнего модуля
+            одинаково на <a href="https://ru.wikipedia.org/wiki/Linux" target="blank">Linux</a>, <a href="https://ru.wikipedia.org/wiki/Macintosh" target="blank">Mac</a> и <a href="https://ru.wikipedia.org/wiki/Windows" target="blank">Microsoft Windows</a>. Для использования внешнего модуля
             необходимо импортировать его в программу. Один из модулей, поставляемых с Python,
             называется «random». Он даёт возможность генерировать псевдослучайные числа. Мы
             используем этот модуль в нашем первом примере.</p>
@@ -46,7 +47,8 @@ for cntr in range(1,15):
             мы говорили в прошлый раз. Пятая строка говорит Python, что нужно использовать
             модуль «random». Мы должны явно указать Python на это.</p>
         <hr/>
-        <h2>Функции</h2>
+        <h2 id="Functions">Функции</h2>
+        <p><a href="#Content"> К содержанию</a></p>
         <p>Когда мы импортировали модуль random, мы использовали функцию randint(). Функция
             — это блок кода, который создан для того, чтобы вызывать его в программе, обычно,
             более одного раза. Это упрощает работу над программой и предотвращает набор одного и
