--- a/03_HTML/add/site.by/index.html
+++ b/03_HTML/add/site.by/index.html
@@ -29,7 +29,7 @@
             </li>
             <li> <a href="promo.html">Акции</a>
                 <ul>
-                    <li> <a href="promo/last.html">Актуальные</a></li>
+                    <li> <a href=promo/last.html">Актуальные</a></li>
                     <li> <a href="promo/old.html">Прошедшие</a></li>
                 </ul>
             </li>
