--- a/04_HTML/add/index1.html
+++ b/04_HTML/add/index1.html
@@ -5,7 +5,7 @@
         <title> Пример страницы </title>
     </head>
     <body>
-        <img src="/C:\Users\Anastasia Serhunina\Desktop\HTML\AnastasiaSerhunina\04_HTML\base\PythonIcon.png" alt="Иконка Python" align="right" title="Иконка Python" width="300"/>
+        <img src="../base/PythonIcon.png" alt="Иконка Python" align="right" title="Иконка Python" width="300"/>
         <h1 align="center" id="home"> HOW-TO: Программа на Python, Часть 1 </h1>
                 <ul>
             <li> <a href="index1.html">Программа на Python — часть 1 </a></li>
@@ -61,16 +61,11 @@ for cntr in range(0,10):
         <table width="100%">
             <tr>
                 <td>
-                    <th align="left"><a href="back.html"> <button><img src="/C:\Users\Anastasia Serhunina\Desktop\HTML\AnastasiaSerhunina\04_HTML\base\back.png" align="left" alt="Назад" title="Назад"/></a></button> </th>
-                    <th> <button><a href="index1.html"><img src="/C:\Users\Anastasia Serhunina\Desktop\HTML\AnastasiaSerhunina\04_HTML\base\home.png" align="center" alt="К содержанию" title="К содержанию" /></a> </button></th>
-                    <th align="right"> <button><a href="index2.html"><img src="/C:\Users\Anastasia Serhunina\Desktop\HTML\AnastasiaSerhunina\04_HTML\base\forward.png" align="right" alt="Вперед" title="Вперед"/></button></a></th>
+                    <th align="left"><a href="back.html"> <button><img src="arrow09_3.svg" width="50" align="left" alt="Назад" title="Назад"/></a></button> </th>
+                    <th> <button><a href="index1.html"><img src="house.svg" width="50" align="center" alt="К содержанию" title="К содержанию" /></a> </button></th>
+                    <th align="right"> <button><a href="index2.html"><img src="arrow09_1.svg" width="50" align="right" alt="Вперед" title="Вперед"/></button></a></th>
                 </td>
             </tr>
         </table>
-        <svg>          
-            <image xlink:href="/C:\Users\Anastasia Serhunina\Desktop\HTML\AnastasiaSerhunina\04_HTML\base\back.png" align="left"></image>
-            <image href="/C:\Users\Anastasia Serhunina\Desktop\HTML\AnastasiaSerhunina\04_HTML\base\home.png" align="center"></image>
-            <image href="/C:\Users\Anastasia Serhunina\Desktop\HTML\AnastasiaSerhunina\04_HTML\base\forward.png" align="right"></image>
-        </svg>
 </body>
 </html>
