--- a/05_HTML/base/index11.html
+++ b/05_HTML/base/index11.html
@@ -3,7 +3,7 @@
     <head><meta charset="UTF-8"></head>
     <body>
         <table border="1" width="700px">
-            <form action="http://sc.it-academy.by/fe/form.php" method="post"></form>
+            <form action="http://fe.it-academy.by/TestForm.php" method="post"></form>
             <tr>
                 <th>Простая форма поиска с вариантами:</th>
                 <th>Простая форма поиска с вариантами:</th>
@@ -17,11 +17,11 @@
                             </label>
                             <br/>
                             <label>
-                                <input type="radio" name="where_to_search" value="на сайте">
+                                <input type="radio" name="where_to_search1" value="на сайте">
                                 на сайте
                             </label>
                             <label>
-                                <input type="radio" name="where_to_search" value="в google">
+                                <input type="radio" name="where_to_search2" value="в google">
                                 в google
                             </label>
                     </fieldset>
@@ -34,11 +34,11 @@
                                 </label>
                             <br/>
                                 <label>
-                                    <input type="radio" name="where_to_search" value="на сайте">
+                                    <input type="radio" name="where_to_search3" value="на сайте">
                                 на сайте
                                 </label>
                                 <label>
-                                    <input type="radio" name="where_to_search" value="в google">
+                                    <input type="radio" name="where_to_search4" value="в google">
                                 в google
                                 </label>
                     </fieldset>
