--- a/05_HTML/base/index11.html
+++ b/05_HTML/base/index11.html
@@ -1,80 +1,177 @@
 <!DOCTYPE html>
 <html>
-    <head><meta charset="UTF-8"></head>
-    <body>
-        <table border="1" width="700px">
-            <form action="http://fe.it-academy.by/TestForm.php" method="post"></form>
-            <tr>
-                <th>Простая форма поиска с вариантами:</th>
-                <th>Простая форма поиска с вариантами:</th>
-            </tr>
-            <tr>
-                <td>
+
+<head>
+    <meta charset="UTF-8">
+</head>
+
+<body>
+    <table border="1" width="700px">
+        <form action="http://fe.it-academy.by/TestForm.php" method="post"></form>
+        <tr>
+            <th>Простая форма поиска с вариантами:</th>
+            <th>Простая форма поиска с вариантами:</th>
+        </tr>
+        <tr>
+            <td>
+                <fieldset>
+                    <form action="http://fe.it-academy.by/TestForm.php" method="post">
+                        <legend>Строка поиска</legend>
+                        <label for="name">
+                            <input type="text" maxlength="10" autofocus> <input type="button" value="Искать" id="search"
+                                name="search">
+                        </label>
+                        <br />
+                        <label>
+                            <input type="radio" name="where_to_search" value="на сайте">
+                            на сайте
+                        </label>
+                        <label>
+                            <input type="radio" name="where_to_search" value="в google">
+                            в google
+                        </label>
+                </fieldset>
+                </form>
+            </td>
+            <td>
+                <form action="http://fe.it-academy.by/TestForm.php" method="post">
                     <fieldset>
                         <legend>Строка поиска</legend>
-                            <label for="name">
-                                <input type="text" maxlength="10" autofocus> <input type="button" value="Искать" id="search" name="search">
-                            </label>
-                            <br/>
-                            <label>
-                                <input type="radio" name="where_to_search1" value="на сайте">
-                                на сайте
-                            </label>
-                            <label>
-                                <input type="radio" name="where_to_search2" value="в google">
-                                в google
-                            </label>
+                        <label for="name">
+                            <input type="text" autofocus>* <input type="button" * value="Искать" id="search"
+                                name="search" autofocus> 
+                        </label>
+                        <br />
+                        <label>
+                            <input type="radio" name="where_to_search" value="на сайте">
+                            на сайте
+                        </label>
+                        <label>
+                            <input type="radio" name="where_to_search" value="в google">
+                            в google
+                        </label>
                     </fieldset>
-                </td>            
-                <td>
-                    <fieldset>
-                        <legend>Строка поиска</legend>
-                                <label for="name">
-                                    <input type="text" autofocus> <input type="button" * value="Искать" id="search" name="search"autofocus>
-                                </label>
-                            <br/>
-                                <label>
-                                    <input type="radio" name="where_to_search3" value="на сайте">
-                                на сайте
-                                </label>
-                                <label>
-                                    <input type="radio" name="where_to_search4" value="в google">
-                                в google
-                                </label>
-                    </fieldset>
-                </td>
-            </tr>
-            <tr>
-                <th>Простая форма авторизации:</th>
-                <th>Опрос(голосование):</th>
-            </tr>
-            <tr>
-                <td>
+                </form>
+            </td>
+        </tr>
+        <tr>
+            <th>Простая форма авторизации:</th>
+            <th>Опрос(голосование):</th>
+        </tr>
+        <tr>
+            <td>
+                <form action="http://fe.it-academy.by/TestForm.php" method="post">
                     <fieldset>
                         <legend>Авторизируйтесь</legend>
-                        <label></label>
-                        <p><input type="text" name="Логин">*Логин</p></label>
+                        <label>
+                        <p><input type="text" name="Логин">*Логин</p>
                         <p><input type="password" name="Пароль">*Пароль</p>
                         <input type="checkbox" name="where_to_stay" value="Оставаться в системе">
                         Оставаться в системе
-                        <br/>
+                        <br />
                         <input type="button" value="Войти">
+                    </label>
                     </fieldset>
+                </form>
+            </td>
+            <td><form action="http://fe.it-academy.by/TestForm.php" method="post">
+                <fieldset>
+                    <legend>Как вам?:</legend>
+                    <label>
+                        <input type="radio" name="f_back" value="ничего">ничего<br/>
+                        <input type="radio" name="f_back" value="неплохо">неплохо<br/>
+                        <input type="radio" name="f_back" value="хорошо">хорошо<br/>
+                        <input type="radio" name="f_back" value="супер">супер<br/>
+                    </label>
+                    <label>
+                        <input type="button" name="Send" value="Отправить">
+                        <input hidden name="date_voite" value="2013.12.31">
+                    </label>
+
+                </fieldset>
+            </form>
+        </td>
+        </tr>
+        <tr>
+            <th>Отзыв:</th>
+            <th>Выпадающий и мульти списки:</th>
+        </tr>
+        <tr>
+            <td>
+                <form action="http://fe.it-academy.by/TestForm.php" method="post">
+                    <fieldset>
+                        <legend>Оставьте Ваш отзыв</legend>
+                        <label>
+                            <input type="text" name="Name">*Имя 
+                            <br/>
+                            <input type="email" name="email" pattern="^[A-Za-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}">*e-mail
+                            <textarea name="fback" placeholder="Форма отправки"></textarea> <br/>
+                            <input type="submit" name="Send" value="Отправить">
+                        </label>
+                    </fieldset>
+                </form>
+            </td>
+            <td> <form action="http://fe.it-academy.by/TestForm.php" method="post">
+                <fieldset>
+                    <legend>Города РБ</legend>
+                    <label>
+                        <select name="RB" id="Btowns">
+                            <option value="0" selected hidden >Города РБ</option>
+                            <option value="1" >Брест</option>
+                            <option value="2" >Минск</option>
+                            <option value="3" >Витебск</option>
+                        </select>
+                        <select name="towns[]" size="8" multiple id="towns">
+                            <optgroup label="Города РБ">
+                            <option value="B0" selected hidden >Города РБ</option>
+                            <option value="B1" >Брест</option>
+                            <option value="B2" >Минск</option>
+                            <option value="B3" >Витебск</option>
+                        </optgroup>
+                        <optgroup label="Города РФ" id="Rtowns">
+                            <option value="R0" selected hidden >Города РФ</option>
+                            <option value="R1" >Москва</option>
+                            <option value="R2" >Рязань</option>
+                            <option value="R3" >Магадан</option>
+                        </optgroup>
+                        </select>
+                        <input type="submit" value="OK">
+                    </label>
+                </fieldset>
+                  </form>
                 </td>
-                <td></td>
             </tr>
-
-
-
-
-
-
-
-
-
-
-
-        </table>
-    </body>
+            <tr>
+                <th>Загрузка файла на сервер:</th>
+                <th>Валидация данных HTML5:</th>
+            </tr>
+            <tr>
+                <td><form action="http://fe.it-academy.by/TestForm.php" method="post" enctype="multipart/form-data">
+                    <fieldset>
+                        <legend>Upload</legend>
+                        <label>
+                            <p>Файл:</p>
+                            <input type="file" name="any" value="f1" dir=“ltr”><br>
+                            <p>Срок хранения (года):</p>
+                            <input type="number" name="years" value="srok">
+                            <input type="submit" name="Upload" value="Загрузить">
+                              </label>
+                          </fieldset>
+                </form>
+                </td>
+                <td><form action="http://fe.it-academy.by/TestForm.php" method="post" enctype="multipart/form-data">
+                    <fieldset>
+                        <legend>Строка поиска</legend>
+                        <label>
+                            <input type="text" placeholder="Только русские буквы" pattern="[А-я а-я]+">
+                            <p><em>Телефонный номер в формате</em></p>
+                            <p>+ХХХ-ХХ-ХХХХХХХ, где Х - любое число</p>
+                            <input type="tel" name="pnumber" pattern="^(\+375|80)(29|25|44|33)(\d{3})(\d{2})(\d{2})$">
+                            <input type="button" name="check" value="Проверить">
+                        </label>
+                </td>
+            </tr>
+    </table>
+</body>
 
 </html>
