--- a/01.CSS/base/index2.html
+++ b/01.CSS/base/index2.html
@@ -7,7 +7,7 @@
             .bbody{
                 font-family: sans-serif;
                 font-size: 14px;
-                background-color:#eee;
+                background-color: blue;
             }
         </style>
         <style media="print">
