--- a/01.CSS/base/index3.html
+++ b/01.CSS/base/index3.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="print.css" media="print">
         <link rel="stylesheet" href="screen.css" media="screen">
     </head>
-    <body>
+    <body class="bbody">
         <h1 align="center"> HOW-TO: Программа на Python, Часть 3 </h1>
         <ul>
             <li><em> Программа на Python — часть 1</em></li>
