--- a/01.CSS/base/index4.html
+++ b/01.CSS/base/index4.html
@@ -6,7 +6,7 @@
         <style> @import "print.css" print;</style>
         <style> @import "screen.css" screen;</style>
     </head>
-    <body>
+    <body class="bbody">
         <h1 align="center"> HOW-TO: Программа на Python, Часть 3 </h1>
         <ul>
             <li><em> Программа на Python — часть 1</em></li>
