--- a/05_HTML/add/index.html
+++ b/05_HTML/add/index.html
@@ -17,9 +17,22 @@
                 </label>
             </fieldset>
         </form>
+        </td>
+       </tr>
+       <tr>
+        <td><form action="http://fe.it-academy.by/TestForm.php" method="post">
+            <fieldset>
+                <legend>Паспортные данные</legend>
+                <label>
+                    <input type="text" placeholder="AA" name="seriya_passport" pattern="^([A-Z]{2})" size="2" maxlength="2" minlength="2"> 
+                    <input type="number" placeholder="1234567" name="num_passport" pattern="^([1-7]{7})"size="7" maxlength="7" minlength="7">
+                </label>
+            </fieldset>
+        </form>
 
         </td>
        </tr>
+
         
 
     </body>
