--- a/01.CSS/base/index1.html
+++ b/01.CSS/base/index1.html
@@ -3,8 +3,22 @@
     <head>
         <meta charset="UTF-8">
         <title> Пример страницы </title>
+        <style media="screen">
+            .bodY{
+                font-family: sans-serif;
+                font-size: 14px;
+                background-color: #eee;
+            }
+        </style>
+        <style media="print">
+            .bodY{
+                font-family: cursive;
+                font-size: 25px;
+                background-color: #bb3434;
+            }
+        </style>
     </head>
-    <body style="font-family: sans-serif; font-size:14px; background-color: #eee;">
+    <body class="bodY">
         <h1 align="center"> HOW-TO: Программа на Python, Часть 1 </h1>
         <ul>
             <li><em> Программа на Python — часть 1</em></li>
