--- a/01.CSS/base/index2.html
+++ b/01.CSS/base/index2.html
@@ -2,76 +2,59 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title> Пример страницы 2 </title>
-        <style media="screen">
-            .bbody{
-                font-family: sans-serif;
-                font-size: 14px;
-                background-color: blue;
-            }
-        </style>
-        <style media="print">
-            .bbody{
-                font-family: cursive;
-                font-size: 35px;
-                background-color: darkgoldenrod;
-            }
-        </style>
-    </head>
-    <body class="bbody">
-        <h1 align="center"> HOW-TO: Программа на Python, Часть 2 </h1>
+        <title> Пример страницы </title>
+        <style media="screen"></style>
+      </head>
+    <body style="font-family: sans-serif;font-size: 14px; background-color: #eee;">
+        <h1 align="center"> HOW-TO: Программа на Python, Часть 1 </h1>
         <ul>
             <li><em> Программа на Python — часть 1</em></li>
             <li><em>Программа на Python — часть 2</em></li>
             <li><em>Программа на Python — часть 3</em></li>
         </ul>
         <h2>Содержание</h2>
-        <h3>HOW-TO: Программа на Python, Часть 2</h3>
+        <h3>HOW-TO: Программа на Python, Часть 1</h3>
         <ul>
-            <li><u>Списки</u></li>
-            <li><u>Комментарии</u></li>
+            <li><u>Наша первая программа</u></li>
+            <li><u>Пример цикла For</u></li>
         </ul>
-        <hr/>
-        <p>Впрошлом уроке мы рассмотрели простую программу, которая использовала raw_input
-            для получения ответа пользователя, простые типы переменных и простой цикл «<strong>for</strong>». В
-            этом уроке мы рассмотрим ещё больше типов переменных и напишем ещё больше
-            программ.</p>
-        <h2>Списки</h2>
-        <p>Давайте рассмотрим другой тип переменных, который называется <em>списки</em>. В других
-            языках программирования они называются <em>массивами</em>. Если мы обратимся к аналогии с
-            коробками для обуви, то массив (список) представляет собой несколько склеенных друг с
-            другом коробок с одинаковыми вещами. Например, в одной коробке лежат вилки, в
-            другой — ножи, в третьей — ложки. Посмотрим на простой список— список месяцев. Мы
-            запрограммируем его так: </p>
+        <p align="left">Из множества существующих языков программирования Python — один из самых лёгких
+            в изучении. Он создан в конце 80-х годов XX века, но с тех пор он сильно изменился.
+            Хотя Python входит в состав большинства дистрибутивов Linux, на него часто не
+            обращают внимания при выборе языка для изучения. В этой статье мы рассмотрим
+            создание консольных приложений, а в следующей — программирование графических
+            интерфейсов (<u>GUI</u>). Давайте создадим простую программу прямо сейчас.</p>
+        <h2>Наша первая программа</h2>
+        <p>Наберём код в текстовом редакторе (например, в <strong> gedit </strong>). Потом мы разберёмся, что делает
+            каждая строка и пойдём дальше.</p>
+        <p>Введите эти 4 строки:</p>
+        <pre>
+#!/usr/bin/env python
+print 'Hello. I am a python program.'
+name = raw_input("What is your name?")
+print "Hello there, " + name + "!"
+</pre>
+        <p>Это всё. Сохраните файл как <strong>hello.py</strong> в любом месте. Я предлагаю сохранить его в папке
+            <strong>python_examples</strong> в домашнем каталоге. Этот пример показывает, как просто написать
+            программу на Python. Для запуска программы нужно сделать её файл исполняемым. Для
+            этого введите в терминале</p>
+        <p><strong><u>chmod +x hello.py</u></strong></p>
+        <p>в папке, в которой вы сохранили программу. Теперь запустите её.</p>
         <pre><code></code>
-months =
-['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'] </pre></code>
-        <p>Чтобы создать список, мы заключили все значения в квадратные скобки ( '[' и ']' ). Мы
-            назвали наш список <em>'months'</em>. Чтобы использовать список, мы дадим команду print
-            <strong>months[0]</strong> или <strong>months[1]</strong>  (которые выведут на экран <em>'Jan'</em>  или <em>'Feb'</em> ). 
-            Помните: счет начинается с нуля. Чтобы найти длину списка, можно использовать такую функцию:</p>
+greg@earth:~/python_examples$ ./hello.py
+Hello. I am a python program.
+What is your name? Ferd Burphel
+Hello there, Ferd Burphel!
+greg@earth:~/python_examples$</pre></code>
+        <p>Вот и всё.</p>
+        <h2>Пример цикла For</h2>
+        <p>Теперь давайте рассмотрим пример программирования цикла. Запустите текстовый редактор и наберите следующую программу:</p>
         <pre><code>
-print len(months)
-        </pre></code>
-        <p>которая вернёт 12.</p>
-        <p>Ещё один пример списков — категории в поваренной книге. Например…</p>
-        <br/>
-        <pre><code>
-categories = ['Main dish','Meat','Fish','Soup','Cookies']
-        </pre></code>
-        <p>Таким образом, в <strong>categories[0]</strong>  хранится <em>'Main dish'</em> , а в <strong>categories[4]</strong>  —  <em>'Cookies'</em>. Всё очень просто. Я уверен, вы сможете придумать много других примеров использования списков. </p>
-        <hr/>
-        <h2>Комментарии</h2>
-        <p>Далее, мы должны обсудить комментарии. Комментарии важны по нескольким причинам.
-            Они не только говорят вам или другим людям, что вы пытаетесь делать, но и напомнят
-            вам через полгода, что же вы хотели сделать. Когда вы будете писать много программ,
-            комментарии станут важными. Также при их помощи вы заставите Python игнорировать
-            какие-либо части кода. Чтобы закомментировать строку, поставьте перед ней знак '#'.
-            Например:</p>
-        <pre><code>
-#       </pre></code>
-        <p>Это комментарий</p>
-        <p>Комментарии можно вставлять в любое место в строке, но помните, что Python
-            проигнорирует всё, что идёт после '#'.</p>
+#!/usr/bin/env python
+for cntr in range(0,10):
+    print cntr </pre></code>
+        <p><em>Не забудьте поставить символ табуляции перед строкой «print cntr».</em>Это важно. В
+            Python для указания на блоки кода используются не круглые «(» и фигурные «{» скобки
+            как в других языках программирования, а отступы.</p>
 </body>
 </html>
