--- a/01.CSS/base/index3.html
+++ b/01.CSS/base/index3.html
@@ -2,101 +2,60 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title> Пример страницы 3 </title>
-        <link rel="stylesheet" href="print.css" media="print">
-        <link rel="stylesheet" href="screen.css" media="screen">
+        <title> Пример страницы </title>
+        <style media="screen" > @import "screen.css";</style>
+        <style media="print" > @import "print.css";</style>
     </head>
-    <body class="bbody">
-        <h1 align="center"> HOW-TO: Программа на Python, Часть 3 </h1>
+    <body class="bodY">
+        <h1 align="center"> HOW-TO: Программа на Python, Часть 1 </h1>
         <ul>
             <li><em> Программа на Python — часть 1</em></li>
             <li><em>Программа на Python — часть 2</em></li>
             <li><em>Программа на Python — часть 3</em></li>
         </ul>
         <h2>Содержание</h2>
-        <h3>HOW-TO: Программа на Python, Часть 3</h3>
+        <h3>HOW-TO: Программа на Python, Часть 1</h3>
         <ul>
-            <li><u>Модули</u></li>
-            <li><u>Функции</u></li>
+            <li><u>Наша первая программа</u></li>
+            <li><u>Пример цикла For</u></li>
         </ul>
-        <hr/>
-        <p>В прошлый раз мы изучали списки, подстановку переменных, комментарии, сравнение и
-            присвоение, операторы <strong>if</strong> и <strong>while</strong> while. Я обещал, что в этой части мы изучим модули и
-            функции. Давайте начнём.</p>
-        <h2>Модули</h2>
-        <p>Модули предлагают способ расширить программирование на Python. Вы можете создать
-            свои модули, использовать те, которые поставляются с Python или которые написали
-            другие. В самом Python есть сотни модулей, которые облегчают написание программ.
-            Список модулей, поставляемых с Python, находится по адресу:
-           <em><u>http://docs.python.org/modindex.html</u></em>. Некоторые модули предназначены для определённых
-            операционных систем, но большинство из них кроссплатформенные и работают
-            одинаково на <u>Linux</u>, <u>Mac</u> и <u>Microsoft Windows</u>. Для использования внешнего модуля
-            необходимо импортировать его в программу. Один из модулей, поставляемых с Python,
-            называется «random». Он даёт возможность генерировать псевдослучайные числа. Мы
-            используем этот модуль в нашем первом примере.</p>
-        <br/>
+        <p align="left">Из множества существующих языков программирования Python — один из самых лёгких
+            в изучении. Он создан в конце 80-х годов XX века, но с тех пор он сильно изменился.
+            Хотя Python входит в состав большинства дистрибутивов Linux, на него часто не
+            обращают внимания при выборе языка для изучения. В этой статье мы рассмотрим
+            создание консольных приложений, а в следующей — программирование графических
+            интерфейсов (<u>GUI</u>). Давайте создадим простую программу прямо сейчас.</p>
+        <h2>Наша первая программа</h2>
+        <p>Наберём код в текстовом редакторе (например, в <strong> gedit </strong>). Потом мы разберёмся, что делает
+            каждая строка и пойдём дальше.</p>
+        <p>Введите эти 4 строки:</p>
         <pre>
-#=======================================
-# random_example.py
-# Module example using the random module
-#=======================================
-import random
-# print 14 random integers
-for cntr in range(1,15):
-    print random.randint(1,10)</pre>
-        <p>Давайте разберём код по строкам. Первые четыре строки — это комментарии, о которых
-            мы говорили в прошлый раз. Пятая строка говорит Python, что нужно использовать
-            модуль «random». Мы должны явно указать Python на это.</p>
-        <hr/>
-        <h2>Функции</h2>
-        <p>Когда мы импортировали модуль random, мы использовали функцию randint(). Функция
-            — это блок кода, который создан для того, чтобы вызывать его в программе, обычно,
-            более одного раза. Это упрощает работу над программой и предотвращает набор одного и
-            того же кода снова и снова. Грубо говоря, если вам нужно написать некоторый код
-            больше, чем 1-2 раза, стоит сделать его функцией. Хотя следующие два примера очень
-            простые, это хорошие примеры функций. Теперь мы хотим, скажем, взять два числа,
-            сложить их, перемножить, вычесть одно из другого, затем вывести на экран эти числа и
-            результаты одновременно. Допустим, нам нужно сделать это три раза для трёх наборов
-            чисел. Тогда наш пример будет выглядеть как код ниже.</p>
-        <pre> 
-#silly example
-print '%d + %d = %d ' % (1,2,1+2)
-print '%d * %d = %d ' % (1,2,1*2)
-print '%d - %d = %d ' % (1,2,1-2)</pre>
-        <pre>
-print '\n'
-print '%d + %d = %d ' % (1,4,1+4)
-print '%d * %d = %d ' % (1,4,1*4)
-print '%d - %d = %d ' % (1,4,1-4)</pre>
-        <pre>
-print '\n'
-print '%d + %d = %d ' % (10,5,10+5)
-print '%d * %d = %d ' % (10,5,10*5)
-print '%d - %d = %d ' % (10,5,10-5)
-print '\n' </pre>
-        <p>Здесь нужно не только набрать много текста, но и непременно возникнут ошибки как при
-            написании, так и при внесении изменений. Вместо этого мы создадим функцию, которую
-            назовём <strong><em>«DoTwo»</em></strong>. Она будет каждый раз брать два числа, проводить математические
-            операции и выводить результат. Начнём с ключевого слова <strong><em>«def»</em></strong>, которое сигнализирует
-            о том, что мы собираемся определить функцию. После слова <strong><em>«def»</em></strong> добавим название
-            функции и список параметров, если таковые имеются, в круглых скобках. Эту строку
-            необходимо завершить двоеточием. Код функции набирается с отступом. Наш
-            улучшенный простой пример (<u>№2</u>) показан ниже.
-            </p>
-            <br/>
-            <pre>
-#silly example 2...still silly, but better
-def DoTwo(num1,num2):
-        print '%d + %d = %d ' % (num1,num2,num1+num2)
-        print '%d * %d = %d ' % (num1,num2,num1*num2)
-        print '%d - %d = %d ' % (num1,num2,num1-num2)
-        print '\n'
-DoTwo(1,2)
-DoTwo(1,4)
-DoTwo(10,5)
-            </pre>
-        <p>Как видите, здесь написано меньше кода — 8 строк вместо 12. Если нам нужно будет чтолибо поменять в функции, мы сможем сделать это, не создавая проблем для нашей
-            программы. Чтобы вызвать функцию, нужно написать её имя и параметры.</p>
-        
+#!/usr/bin/env python
+print 'Hello. I am a python program.'
+name = raw_input("What is your name?")
+print "Hello there, " + name + "!"
+</pre>
+        <p>Это всё. Сохраните файл как <strong>hello.py</strong> в любом месте. Я предлагаю сохранить его в папке
+            <strong>python_examples</strong> в домашнем каталоге. Этот пример показывает, как просто написать
+            программу на Python. Для запуска программы нужно сделать её файл исполняемым. Для
+            этого введите в терминале</p>
+        <p><strong><u>chmod +x hello.py</u></strong></p>
+        <p>в папке, в которой вы сохранили программу. Теперь запустите её.</p>
+        <pre><code></code>
+greg@earth:~/python_examples$ ./hello.py
+Hello. I am a python program.
+What is your name? Ferd Burphel
+Hello there, Ferd Burphel!
+greg@earth:~/python_examples$</pre></code>
+        <p>Вот и всё.</p>
+        <h2>Пример цикла For</h2>
+        <p>Теперь давайте рассмотрим пример программирования цикла. Запустите текстовый редактор и наберите следующую программу:</p>
+        <pre><code>
+#!/usr/bin/env python
+for cntr in range(0,10):
+    print cntr </pre></code>
+        <p><em>Не забудьте поставить символ табуляции перед строкой «print cntr».</em>Это важно. В
+            Python для указания на блоки кода используются не круглые «(» и фигурные «{» скобки
+            как в других языках программирования, а отступы.</p>
 </body>
 </html>
