--- a/01.CSS/base/index5.html
+++ b/01.CSS/base/index5.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title> Пример страницы </title>
-    <link rel="stylesheet" href="screen.css" media="screen">
-    <link rel="stylesheet" href="print.css" media="print">
+    <style> @import "screen.css" screen;</style>   
+    <style> @import "print.css" print;</style>  
 </head>
+
 <body class="bodY">
     <h1 align="center"> HOW-TO: Программа на Python, Часть 1 </h1>
     <ul>
